--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=BankSystem
 
 # Database settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/bank
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank_db
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=nilesh
 
 # JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
